--- a/cookieClicker.css
+++ b/cookieClicker.css
@@ -69,15 +69,41 @@
 }
 
 .cookieContainer{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     background-color: rgba(255, 255, 255, 0.15);
     width: 70rem;
 }
 
 .unitContainer{
     background-color: rgba(255, 255, 255, 0.3);
+    overflow-y: scroll;
     width: 30rem;
 }
 
+/* Main page: cookie */
+
+.cookie{
+    width: 5rem;
+    height: 5rem;
+    margin: auto;
+    transition-duration: 100ms;
+    transform: scale(1, 1);
+}
+
+.cookie:hover{
+    transition-duration: 100ms;
+    transform: scale(2, 2);
+}
+
+/* Main page: units */
+
+.singleUnitCard{
+    background-color: red;
+    width: auto;
+    height: 10rem;
+}
 
 html{
     background-color: brown;
