added active css to cookie and refined some code

--- a/cookieClicker.css
+++ b/cookieClicker.css
@@ -98,6 +98,11 @@
     transform: scale(2, 2);
 }
 
+.cookie:active{
+    transition-duration: 50ms;
+    transform: skewX(25deg);
+}
+
 .cookieNumber{
     font-size: 3rem;
     margin: auto;
