--- a/cookieClicker.css
+++ b/cookieClicker.css
@@ -21,21 +21,34 @@
     text-align: center;
     width: 10rem;
     height: auto;
+    transition-duration: 100ms;
     background-color: rgb(33, 158, 33);
     color: white;
     border-radius: 10px;
     line-height: 4rem;
+    cursor: pointer;
+}
 
+.navBtn:hover{
+    transition-duration: 100ms;
+    background-color:rgb(44, 100, 204);
 }
 
 .saveBtn{
     text-align: center;
     width: 10rem;
     height: auto;
+    transition-duration: 100ms;
     background-color: rgb(33, 154, 158);
     color: white;
     border-radius: 10px;
     line-height: 4rem;
+    cursor: pointer;
+}
+
+.saveBtn:hover{
+    transition-duration: 100ms;
+    background-color: rgb(192, 166, 50);
 }
 
 .navTitle{
@@ -122,7 +135,6 @@
 }
 
 .unitPortrait{
-    background-color: red;
     grid-column-start: 1;
     grid-column-end: 3;
     grid-row-start: 1;
@@ -130,28 +142,31 @@
 }
 
 .unitName{
-    background-color: blue;
     grid-column-start: 1;
     grid-column-end: 3;
     grid-row-start: 5;
     grid-row-end: 7;
+    color: white;
+    background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.15));
 
 }
 
 .unitCookies{
-    background-color: orange;
     grid-column-start: 3;
     grid-column-end: 5;
     grid-row-start: 1;
     grid-row-end: 3;
+    color: white;
+    background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.15));
 }
 
 .unitAmount{
-    background-color: pink;
     grid-column-start: 3;
     grid-column-end: 5;
     grid-row-start: 3;
     grid-row-end: 5;
+    color: white;
+    background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.15));
 }
 
 .unitBtnContainer{
@@ -159,26 +174,32 @@
     flex-direction: row;
     flex-wrap: wrap;
     align-items: center;
-    background-color: brown;
     grid-column-start: 5;
     grid-column-end: 7;
     grid-row-start: 1;
     grid-row-end: 5;
+    color: white;
+    background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.15));
 }
 
 .unitBtn{
+    text-align: center;
     margin: auto;
-    border: 3px solid black;
+    border: 4px solid black;
     width: 4.2rem;
     height: 2.8rem;
+    cursor: pointer;
+    color: white;
+    background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.15));
 }
 
 .unitCost{
-    background-color: purple;
     grid-column-start: 3;
     grid-column-end: 7;
     grid-row-start: 5;
     grid-row-end: 7;
+    color: white;
+    background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.15));
 }
 
 html{
