--- a/cookieClicker.css
+++ b/cookieClicker.css
@@ -369,6 +369,50 @@
 }
 
 
+/* Main page: options and upgrades */
+
+.optionsContainer{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    background-color: rgba(23, 196, 202, 0.15);
+    width: 100rem;
+    height: 12rem;
+}
+
+.tabsContainer{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    height: 100%;
+    width: 18rem;
+}
+
+.tabsBtn{
+    background-color: rgba(0, 0, 0, 0.9);
+    color: white;
+    height: 4rem;
+    width: 6rem;
+    border-radius: 10px;
+    cursor: pointer;
+    transition-duration: 50ms;
+    transform: scale(1, 1);
+}
+
+.tabsBtn:hover{
+    transition-duration: 50ms;
+    transform: scale(1.3, 1.3);
+}
+
+.tabs{
+    height: 100%;
+    width: 82rem;
+    background-color: rgba(20, 20, 70, 0.9);
+    border-radius: 5px;
+
+}
+
+
 html{
     background-color: gray;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
