--- a/cookieClicker.css
+++ b/cookieClicker.css
@@ -255,6 +255,13 @@
     cursor: pointer;
     color: white;
     background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.15));
+    transition-duration: 50ms;
+    transform: scale(1, 1);
+}
+
+.unitBtn:hover{
+    transition-duration: 50ms;
+    transform: scale(1.2, 1.2);
 }
 
 .unitCost{
@@ -389,6 +396,10 @@
 }
 
 .tabsBtn{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     background-color: rgba(0, 0, 0, 0.9);
     color: white;
     height: 4rem;
@@ -397,6 +408,8 @@
     cursor: pointer;
     transition-duration: 50ms;
     transform: scale(1, 1);
+    text-align: center;
+
 }
 
 .tabsBtn:hover{
