--- a/cookieClicker.css
+++ b/cookieClicker.css
@@ -480,6 +480,38 @@
     background-color: red;
 }
 
+.cookieUpgradeContainer{
+    height: 10rem;
+    width: 12rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: rgba(255, 255 , 255, 0.4);
+    margin-left: 0.5rem;
+    margin-right: 0.5rem;
+    border: 2px solid rgba(255, 255, 255 0.8);
+    border-radius: 8px;
+}
+
+.cookieUpgradeName{
+    text-align: center;
+    margin-top: 0;
+    margin-bottom: 0.2rem;
+}
+
+.cookieUpgradeDescription{
+    text-align: center;
+    margin-top: 0;
+    margin-bottom: 0.2rem;
+}
+
+.cookieUpgradeBtn{
+    text-align: center;
+    margin-top: auto;
+    margin-bottom: 0.2rem;
+}
+
+
 html{
     background-color: gray;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
