--- a/cookieClicker.css
+++ b/cookieClicker.css
@@ -162,6 +162,13 @@
     margin-top: 1rem;
 }
 
+.randomCookiePopup{
+    width: 5rem;
+    height: 5rem;
+    margin: 0;
+    display: none;
+}
+
 /* Main page: units */
 
 .singleUnitCard{
