--- a/cookieClicker.css
+++ b/cookieClicker.css
@@ -144,6 +144,7 @@
     margin-bottom: 1rem;
     transition-duration: 100ms;
     transform: scale(1, 1);
+    z-index: 3;
 }
 
 .cookie:hover{
@@ -160,13 +161,16 @@
     font-size: 3rem;
     margin: auto;
     margin-top: 1rem;
+    z-index: 3;
 }
 
 .randomCookiePopup{
+    position: absolute;
     width: 5rem;
     height: 5rem;
     margin: 0;
     display: none;
+    z-index: 2;
 }
 
 /* Main page: units */
