--- a/cookieClicker.css
+++ b/cookieClicker.css
@@ -533,9 +533,22 @@
     overflow-x: scroll;
     background-color: blue;
 }
+.currentLevelProgress{
+    width: 15rem;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.eatingOptions{
+    width: 15rem;
+    height: 100%;
+    display: flex;
+    flex-direction: column; 
+}
 
 .levelContainer{
-    width:15rem;
+    width: 15rem;
     height: 3rem;
     background-color: rgba(44, 197, 77, 0.3);
 }
@@ -546,6 +559,12 @@
     margin: 0;
     padding: 0;
     background-color: rgba(44, 197, 77, 0.8);
+}
+
+.cookieTest{
+    width: 1rem;
+    height: 1rem;
+    background-color: red;
 }
 
 
