added errormessage element and function which changes innerhtml of the element to a message and blank again after 3 secs

--- a/cookieClicker.css
+++ b/cookieClicker.css
@@ -173,6 +173,10 @@
     z-index: 2;
 }
 
+.errorMessage{
+    color: red;
+}
+
 /* Main page: units */
 
 .singleUnitCard{
@@ -434,7 +438,6 @@
     width: 82rem;
     background-color: rgba(20, 20, 70, 0.9);
     border-radius: 5px;
-
 }
 
 /* Upgrades */
