--- a/cookieClicker.css
+++ b/cookieClicker.css
@@ -643,6 +643,30 @@
     background-color: red;
 }
 
+/* level-up template */
+
+.levelUpContainer{
+    display:none;
+    flex-direction: column;
+    position: absolute;
+    align-items: center;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    border: 0.2rem solid rgba(52, 110, 197, 0.8);
+    border-radius: 15px;
+    background-color: rgba(52, 151, 197, 0.15);
+    width: 35rem;
+    height:40rem;
+}
+
+@keyframes levelUp {
+    0% {transform: translate(-50%, -70%); opacity: 0}
+    40% {transform: translate(-50%, -50%); opacity: 1}
+    60% {transform: translate(-50%, -50%); opacity: 1}
+    100% {transform: translate(-50%, -30%); opacity: 0}
+}
+
 
 html{
     background-color: gray;
