--- a/cookieClicker.css
+++ b/cookieClicker.css
@@ -869,6 +869,24 @@
 }
 
 
+
+@keyframes elementAppearing {
+    0% {transform: scale(0.2, 0.2);
+    opacity: 0.1;}
+    20% {transform: scale(0.6, 0.6);
+        opacity: 0.7;}
+    40% {transform: scale(0.9, 0.9);
+        opacity: 1;}
+
+    60% {transform: scale(1.2, 1.2);
+    filter: brightness(200%);}
+    80% {transform: scale(1, 1);
+        filter: brightness(150%);}
+    100% {filter: brightness(100%);}
+
+
+}
+
 html{
     background-color: gray;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
