added landcounter and new counter update function

--- a/cookieClicker.css
+++ b/cookieClicker.css
@@ -189,7 +189,7 @@
 
 .currencyContainer{
     height: 6rem;
-    display: flex;
+    display: none;
     flex-direction: row;
     align-items: center;
     text-align: center;
