--- a/cookieClicker.css
+++ b/cookieClicker.css
@@ -88,6 +88,7 @@
 }
 
 .cookieContainer{
+    position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -214,6 +215,12 @@
 @keyframes clickCursorAnimation1 {
     0% {opacity: 1; transform: translateY(0);}
     100% {opacity: 0; transform: translateY(-2rem);}
+}
+
+@keyframes clickCursorAnimation2 {
+    0% {opacity: 0; transform: translateY(0);}
+    50% {opacity: 1; transform: translateY(50%);}
+    100% {opacity: 0; transform: translateY(100%);}
 }
 
 /* Main page: units */
