--- a/cookieClicker.css
+++ b/cookieClicker.css
@@ -243,6 +243,7 @@
     grid-row-end: 5;
     border: 4px solid rgb(24, 117, 24);
     border-radius: 10px;
+    background-color: rgba(0, 0, 0, 0.7);
 }
 
 .unitName{
